--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+android.useAndroidX=true
+android.enableJetifier=true
+
 systemProp.sonar.organization=florianarnould-github
 systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.login=a1248c6568249aac27b4d6c5af54f57f91966be8
